# blackelder-engine

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  camera2d.cpp  camera2d.h  clock.cpp  clock.h  command_parser.cpp  command_parser.h  context.cpp  context.h  log.h  memory_map.cpp  memory_map.h
src/gl/: CMakeLists.txt  gl.h  program.cpp  program.h  shader.cpp  shader.h  texture.cpp  texture.h  texture_loader.cpp  texture_loader.h
src/image/: CMakeLists.txt  astc.cpp  astc.h  dds.cpp  dds.h  png.cpp  png.h
tests/: CMakeLists.txt
